--- a/src-copy/index.css
+++ b/src-copy/index.css
@@ -1,3 +1,19 @@
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Open Sans', sans-serif;
+
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+
 /* Join page */
 #join-chat {
   margin: 0px auto;
@@ -16,7 +32,6 @@
 .joinform form {
     margin-top: 25vh;
 }
-
 
 /* Chat page */
 main#chat-container {
