--- a/src/index.css
+++ b/src/index.css
@@ -104,16 +104,9 @@ div.chat-bar {
   border-top: 1px solid #ccc;
 }
 
-.username {
-  width: 20vw;
-  padding: 10px 1vw;
-  float: left;
-  text-align: right;
-}
-
 .message-input {
   width: 53vw;
-  float: right;
+  padding-left: 15px;
 }
 
 #msg {
@@ -281,4 +274,23 @@ div.message-list {
   to {
       opacity: 1;
   }
+}
+
+.username-suggestions {
+  position: fixed;
+  bottom: 7.5vh;
+  line-height: 32px;
+  width: 100%;
+}
+
+.suggested-username {
+  padding-left: 2vw;
+  background: #304b76;
+  color: #fff;
+  width: 100%;
+  border-bottom: 1px solid #fff;
+}
+
+.suggested-username.active {
+  background-color: #ffc200;
 }
