Create notification when some one refers your username.
Do not show the user's username in the username suggestions list.

--- a/src/index.css
+++ b/src/index.css
@@ -236,6 +236,7 @@ div.message-list {
 
 /* CSS based fade in */
 .fadein-right {
+  animation: fadein 300ms;
   -moz-animation: fadein 300ms; /* Firefox */
   -webkit-animation: fadein 300ms; /* Safari and Chrome */
   -o-animation: fadein 300ms; /* Opera */
